# IdeaGeneration

./: .gitignore  DESIGN_MIGRATION.md  QUICKSTART.md  README.md  start.bat  start.sh
backend/: ideageneration.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py
backend/app/models/: __init__.py  news.py
backend/app/routers/: __init__.py  ideas.py  news.py
backend/app/schemas/: __init__.py  idea.py  news.py  tag.py
backend/app/services/: idea_service.py  llm_client.py  news_service.py  rss_fetcher.py  rss_sources.py  scheduler.py  tag_extractor.py
backend/tests/: test_prompts.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: models.dart
frontend/lib/providers/: export_provider.dart  idea_provider.dart  news_provider.dart
frontend/lib/screens/: export_screen.dart  forge_screen.dart  home_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: devil_audit_section.dart  error_banner.dart  forge_bottom_actions.dart  idea_content_section.dart  idea_title_section.dart  news_card.dart  sources_section.dart
