[project]
name = "backend"
version = "0.1.0"
description = "IdeaGeneration FastAPI Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "feedparser>=6.0.10",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]
